log
Sun Mar 13 22:51:44 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:8: error: expected expression before ‘=’ token
     c* = a + b;
        ^
Compilation failed
82b7e0c
Sun Mar 13 22:52:02 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
51bdf00
Sun Mar 13 22:57:28 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c:39:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘void’
 void sumaNultimos(int a[], int n, int m, int * suma) {
 ^~~~
test.c: In function ‘test_suma_n’:
test.c:91:5: error: implicit declaration of function ‘sumaNultimos’ [-Werror=implicit-function-declaration]
     sumaNultimos(a, 10, m, res);
     ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fe1a6c7
Sun Mar 13 22:59:06 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
19a139f
Sun Mar 13 23:54:11 UTC 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:43:3: error: expected ‘;’ before ‘}’ token
   }
   ^
Compilation failed
de1e9a1
Sun Mar 13 23:54:34 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
7b18727
Mon Mar 14 00:01:31 UTC 2022: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
539f793
Mon Mar 14 00:09:47 UTC 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:66:4: error: expected identifier or ‘(’ before ‘return’
    return NULL;
    ^~~~~~
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c5558ea
Mon Mar 14 00:10:03 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
2fc9422
Mon Mar 14 00:36:11 UTC 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:65:17: error: expected expression before ‘Persona’
   strcpy(nombre,Persona.nombre);
                 ^~~~~~~
exercises.c:67:15: error: expected expression before ‘Persona’
   strcpy(rut, Persona.rut);
               ^~~~~~~
exercises.c:69:10: error: expected identifier or ‘(’ before ‘.’ token
   Persona.edad = edad;
          ^
exercises.c:63:12: error: unused variable ‘crearPersona’ [-Werror=unused-variable]
   Persona* crearPersona = malloc (sizeof(Persona));
            ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdc65ad
Mon Mar 14 00:49:38 UTC 2022: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:71:10: error: expected identifier or ‘(’ before ‘.’ token
   Persona.edad = edad;
          ^
Compilation failed
e2eb159
Mon Mar 14 00:50:50 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
52aaf82
